ajout collection marques

--- a/_includes/brands.html
+++ b/_includes/brands.html
@@ -8,43 +8,12 @@
               <div class="clients-container">
                 <div class="clients">
                   
+                  {% for marque in site.marques %}
+                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="500">
+                    <a href="#"><img src="{{ marque.image }}" alt="{{ marque.title }}"></a>
+                  </div>
+                  {% endfor %}
                   
-                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="500">
-                    <a href="#"><img src="images/client-5.png" alt=""></a>
-                  </div>
-                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="600">
-                    <a href="#"><img src="images/client-6.png" alt=""></a>
-                  </div>
-                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="700">
-                    <a href="#"><img src="images/client-7.png" alt=""></a>
-                  </div>
-                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="800">
-                    <a href="#"><img src="images/client-8.png" alt=""></a>
-                  </div>
-                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="100">
-                    <a href="#"><img src="images/client-1.png" alt=""></a>
-                  </div>
-                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="200">
-                    <a href="#"><img src="images/client-2.png" alt=""></a>
-                  </div>
-                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="300">
-                    <a href="#"><img src="images/client-3.png" alt=""></a>
-                  </div>
-                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="400">
-                    <a href="#"><img src="images/client-4.png" alt=""></a>
-                  </div>
-                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="500">
-                    <a href="#"><img src="images/client-5.png" alt=""></a>
-                  </div>
-                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="600">
-                    <a href="#"><img src="images/client-6.png" alt=""></a>
-                  </div>
-                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="700">
-                    <a href="#"><img src="images/client-7.png" alt=""></a>
-                  </div>
-                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="800">
-                    <a href="#"><img src="images/client-8.png" alt=""></a>
-                  </div>
                 </div>
               </div>
             </div>
