--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@
 
       <!-- section start -->
       <!-- ================ -->
-      <section class="section dark-translucent-bg pv-40" style="background-image:url('images/shop-banner.jpg');background-position: 50% 32%;">
+      <section class="section parallax dark-translucent-bg pv-40" style="background-image:url('images/paralax2.jpg');background-position: 50% 32%;">
         <div class="container">
           <div class="row grid-space-10">
             <div class="col-md-3 col-sm-6">
