--- a/_includes/brands.html
+++ b/_includes/brands.html
@@ -9,8 +9,8 @@
                 <div class="clients">
                   
                   {% for marque in site.marques %}
-                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="500">
-                    <a href="#"><img src="{{ marque.image }}" alt="{{ marque.title }}"></a>
+                  <div class="col-md-2"  style="margin: 10px; padding: 10px;">
+                    <a href="#"><img src="{{ marque.image }}" alt="{{ marque.title }}" style="width: 100%; height: 100%;"></a>
                   </div>
                   {% endfor %}
                   
