--- a/_includes/header.html
+++ b/_includes/header.html
@@ -94,13 +94,10 @@
                   
                   <!-- logo -->
                   <div id="logo" class="logo">
-                    <a href="index.html"><img id="logo_img" src="images/logo_light_blue.png" alt="The Project"></a>
+                    <a href="index.html"><img id="logo_img" src="/images/logo.png" alt="SMBS_LOGO"></a>
                   </div>
 
-                  <!-- name-and-slogan -->
-                  <div class="site-slogan">
-                    Multipurpose HTML5 Template
-                  </div>
+                 
 
                 </div>
                 <!-- header-left end -->
