--- a/_includes/products.html
+++ b/_includes/products.html
@@ -13,25 +13,26 @@
               <div class="tab-content clear-style">
                 <div class="tab-pane active" id="pill-1">
                   <div class="row masonry-grid-fitrows grid-space-10">
+                  {% for produit in site.produits %}
                     <div class="col-md-3 col-sm-6 masonry-grid-item">
                       <div class="listing-item white-bg bordered mb-20">
                         <div class="overlay-container">
-                          <img src="images/product-1.jpg" alt="">
-                          <a class="overlay-link popup-img-single" href="images/product-1.jpg"><i class="fa fa-search-plus"></i></a>
-                          <span class="badge">30% OFF</span>
+                          <img src="{{ produit.image }}" alt="" style="width: 276px; height: 276px;">
+                          <a class="overlay-link popup-img-single" href="{{ produit.image }}"><i class="fa fa-search-plus"></i></a>
+                          <span class="badge">{{ produit.label }}</span>
                           
                         </div>
                         <div class="body">
-                          <h3><a href="shop-product.html">Suscipit consequatur velit</a></h3>
-                          <p class="small">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas inventore modi.</p>
+                          <h3><a href="shop-product.html">{{ produit.title }}</a></h3>
+                          <p class="small">{{ produit.content }}</p>
                           <div class="elements-list clearfix">
-                            <span class="price"><del>$100.00</del> $70.00</span>
-                            <a href="shop-product.html" class="pull-right margin-clear btn btn-sm btn-default-transparent btn-animated">Voir le produit<i class="fa fa-search-plus"></i></a>
+                            <span class="price"><del>{{ produit.faux_prix }}</del></span>
+                            <a href="shop-product.html" class="pull-right margin-clear btn btn-sm btn-default-transparent btn-animated">{{ produit.prix }}</i></a>
                           </div>
                         </div>
                       </div>
                     </div>
-                    
+                  {% endfor %} 
                   </div>
                 </div>
                 
