--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -9,68 +9,14 @@
           <div class="slider-banner-container">
             <div class="slider-banner-fullwidth-big-height">
               <ul class="slides">
-                <!-- slide 1 start -->
-                <!-- ================ -->
-                <li data-transition="random" data-slotamount="7" data-masterspeed="500" data-saveperformance="on" data-title="15% de réduction">
                 
-                <!-- main image -->
-                <img src="images/shopslide1.jpg" alt="slidebg1" data-bgposition="center top"  data-bgrepeat="no-repeat" data-bgfit="cover">
-                
-                <!-- Transparent Background -->
-                <div class="tp-caption dark-translucent-bg"
-                  data-x="center"
-                  data-y="bottom"
-                  data-speed="600"
-                  data-start="0">
-                </div>
-
-                <!-- LAYER NR. 1 -->
-                <div class="tp-caption sfb fadeout large_white"
-                  data-x="left"
-                  data-y="180"
-                  data-speed="500"
-                  data-start="1000"
-                  data-easing="easeOutQuad">Recevez <span class="text-default">15%</span> de réduction<br> Soldes d'hiver
-                </div>  
-
-                <!-- LAYER NR. 2 -->
-                <div class="tp-caption sfb fadeout large_white tp-resizeme hidden-xs"
-                  data-x="left"
-                  data-y="300"
-                  data-speed="500"
-                  data-start="1300"
-                  data-easing="easeOutQuad"><div class="separator-2 light"></div>
-                </div>  
-
-                <!-- LAYER NR. 3 -->
-                <div class="tp-caption sfb fadeout medium_white hidden-xs"
-                  data-x="left"
-                  data-y="320"
-                  data-speed="500"
-                  data-start="1300"
-                  data-easing="easeOutQuad"
-                  data-endspeed="600">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Nesciunt, maiores, aliquid. Repellat eum numquam aliquid culpa offici, <br> tenetur fugiat dolorum sapiente eligendi...
-                </div>
-
-                <!-- LAYER NR. 4 -->
-                <div class="tp-caption sfb fadeout small_white text-center"
-                  data-x="left"
-                  data-y="430"
-                  data-speed="500"
-                  data-start="1600"
-                  data-easing="easeOutQuad"
-                  data-endspeed="600"><a href="#" class="btn btn-default btn-animated">Voir plus <i class="fa fa-arrow-right"></i></a>
-                </div>
-
-                </li>
-                <!-- slide 1 end -->
-
+                {% for slider in site.sliders %}
                 <!-- slide 2 start -->
                 <!-- ================ -->
                 <li data-transition="random" data-slotamount="7" data-masterspeed="500" data-saveperformance="on" data-title="Nouvel arrivage">
                 
                 <!-- main image -->
-                <img src="images/shopslide2.jpg" alt="slidebg1" data-bgposition="center top"  data-bgrepeat="no-repeat" data-bgfit="cover" style="width: 100%; height: 100%;">
+                <img src="{{ slider.image }}" alt="{{ slider.image }}" data-bgposition="center top"  data-bgrepeat="no-repeat" data-bgfit="cover">
                 
                 <!-- Transparent Background -->
                 <div class="tp-caption dark-translucent-bg"
@@ -86,7 +32,7 @@
                   data-y="180"
                   data-speed="500"
                   data-start="1000"
-                  data-easing="easeOutQuad"><span class="text-default">Nouvel</span> Arrivage<br> Version Limité
+                  data-easing="easeOutQuad">{{ slider.text }}
                 </div>  
 
                 <!-- LAYER NR. 2 -->
@@ -105,20 +51,13 @@
                   data-speed="500"
                   data-start="1300"
                   data-easing="easeOutQuad"
-                  data-endspeed="600">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Nesciunt, maiores, aliquid. Repellat eum numquam aliquid culpa offici, <br> tenetur fugiat dolorum sapiente eligendi...
+                  data-endspeed="600">{{ slider.content }}
                 </div>
 
-                <!-- LAYER NR. 4 -->
-                <div class="tp-caption sfb fadeout small_white text-right text-center"
-                  data-x="right"
-                  data-y="430"
-                  data-speed="500"
-                  data-start="1600"
-                  data-easing="easeOutQuad"
-                  data-endspeed="600"><a href="#" class="btn btn-default btn-animated">Voir <i class="fa fa-arrow-right"></i></a>
-                </div>
+                
                 </li>
                 <!-- slide 2 end -->
+                {% endfor %}
               </ul>
               <div class="tp-bannertimer"></div>
             </div>
