modification front end 2

--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -16,7 +16,7 @@
                 <li data-transition="random" data-slotamount="7" data-masterspeed="500" data-saveperformance="on" data-title="Nouvel arrivage">
                 
                 <!-- main image -->
-                <img src="{{ slider.image }}" alt="{{ slider.image }}" data-bgposition="center top"  data-bgrepeat="no-repeat" data-bgfit="cover">
+                <img src="{{ slider.image }}" alt="{{ slider.image }}" data-bgposition="center top"  data-bgrepeat="no-repeat"  style="width: 1286px; height: 650px;">
                 
                 <!-- Transparent Background -->
                 <div class="tp-caption dark-translucent-bg"
