modification front end 3

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -94,7 +94,7 @@
                   
                   <!-- logo -->
                   <div id="logo" class="logo">
-                    <a href="index.html"><img id="logo_img" src="/images/logo.png" alt="SMBS_LOGO"></a>
+                    <a href="index.html"><img id="logo_img" src="{{ site.logo }}" alt="SMBS_LOGO"></a>
                   </div>
 
                  
