--- a/_includes/products.html
+++ b/_includes/products.html
@@ -5,10 +5,8 @@
               <!-- pills start -->
               <!-- ================ -->
               <!-- Nav tabs -->
-              <ul class="nav nav-pills" role="tablist">
-                <li class="active"><a href="#pill-1" role="tab" data-toggle="tab" title="Latest Arrivals"><i class="icon-star"></i> Nos produits</a></li>
-                
-              </ul>
+              <h2 class="text-center">Tous nos <strong>Produits</strong></h2>
+              <div class="separator-2"></div>
               <!-- Tab panes -->
               <div class="tab-content clear-style">
                 <div class="tab-pane active" id="pill-1">
@@ -23,11 +21,11 @@
                           
                         </div>
                         <div class="body">
-                          <h3><a href="shop-product.html">{{ produit.title }}</a></h3>
+                          <h3><a href="#">{{ produit.title }}</a></h3>
                           <p class="small">{{ produit.content }}</p>
                           <div class="elements-list clearfix">
                             <span class="price"><del>{{ produit.faux_prix }}</del></span>
-                            <a href="shop-product.html" class="pull-right margin-clear btn btn-sm btn-default-transparent btn-animated">{{ produit.prix }}</i></a>
+                            <a href="#" class="pull-right margin-clear btn btn-sm btn-default-transparent btn-animated">{{ produit.prix }}</i></a>
                           </div>
                         </div>
                       </div>
