--- a/_includes/brands.html
+++ b/_includes/brands.html
@@ -1,9 +1,27 @@
-<section  class="section clearfix">
+ <!-- section start -->
+      <!-- ================ -->
+     <section class="section parallax dark-translucent-bg pv-40" style="background-image:url('{{ site.parallax1 }}');background-position: 50% 32%;">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <h2 class="text-center">Toutes nos <strong>Marques</strong></h2>
-              <div class="separator-2"></div>
+              <div class="call-to-action text-center">
+                <div class="row">
+                  <div class="col-sm-12">
+                    <h1 class="title">Toutes nos marques partenaires</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem quasi explicabo consequatur consectetur, a atque voluptate officiis eligendi nostrum.</p>
+                  </div>
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- section end --><section  class="section clearfix">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              
               
               <div class="clients-container">
                 <div class="clients">
@@ -20,3 +38,46 @@
           </div>
         </div>
       </section>
+       <!-- section start -->
+      <!-- ================ -->
+      <section class="section parallax dark-translucent-bg pv-40" style="background-image:url('{{ site.parallax2 }}');background-position: 50% 32%;">
+        <div class="container">
+          <div class="row grid-space-10">
+            <div class="col-md-3 col-sm-6">
+              <div class="pv-30 ph-20 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                <span class="icon default-bg"><i class="fa fa-diamond"></i></span>
+                <h3>Qualité garantie</h3>
+                <div class="separator clearfix"></div>
+                
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+              <div class="pv-30 ph-20 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="150">
+                <span class="icon default-bg"><i class="icon-lock"></i></span>
+                <h3>Paiement securitaire</h3>
+                <div class="separator clearfix"></div>
+                
+              </div>
+            </div>
+            <div class="clearfix visible-sm"></div>
+            <div class="col-md-3 col-sm-6">
+              <div class="pv-30 ph-20 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="200">
+                <span class="icon default-bg"><i class="icon-globe"></i></span>
+                <h3 class="pl-10 pr-10">Livraison rapide</h3>
+                <div class="separator clearfix"></div>
+                
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+              <div class="pv-30 ph-20 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="250">
+                <span class="icon default-bg"><i class="icon-thumbs-up"></i></span>
+                <h3>24/7 Support Client</h3>
+                <div class="separator clearfix"></div>
+                
+              </div>
+            </div>
+          </div>
+          
+        </div>
+      </section>
+      <!-- section end -->
