--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -1,4 +1,4 @@
-<section id="categories" class="section light-gray-bg clearfix">
+<section id="categories" class="section default-bg clearfix">
         <div class="container">
           <div class="row">
             <div class="col-md-8 col-md-offset-2">
