--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
                     <h2>{{ site.showroom }} </h2>
                   </div>
                   <div class="col-sm-4">
-                    <p class="mt-10"><a href="#" class="btn btn-animated btn-lg btn-gray-transparent ">Purchase<i class="fa fa-cart-arrow-down pl-20"></i></a></p>
+                    <p class="mt-10"><a href="#" class="btn btn-animated btn-lg btn-gray-transparent ">Contact<i class="fa fa-map-marker pl-20"></i></a></p>
                   </div>
                 </div>
               </div>
@@ -33,7 +33,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="footer-content">
-                    <div class="logo-footer"><img id="logo-footer" src="images/logo_light_blue.png" alt=""></div>
+                    <div class="logo-footer"><img id="logo-footer" src="{{ site.logo }}" alt=""></div>
                     <p>{{ site.description }}</p>
                     <div class="icons-block mt-10 mb-10">
                       <i class="fa fa-cc-paypal"></i>
