--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -68,3 +68,18 @@
         <!-- slideshow end -->
 
       </div>
+
+      <!-- section start -->
+      <!-- ================ -->
+      <section class="light-gray-bg pv-30 clearfix">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+              <h1 class="text-center large">Bienvenue au <span class="text-default">Groupe SMBS</span></h1>
+              <div class="separator"></div>
+              <p class="large text-center">{{ site.description }} </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- section end -->
