modification front end 4

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -94,7 +94,7 @@
                   
                   <!-- logo -->
                   <div id="logo" class="logo">
-                    <a href="index.html"><img id="logo_img" src="{{ site.logo }}" alt="SMBS_LOGO"></a>
+                    <a href="index.html"><img id="logo_img" src="{{ site.logo }}" alt="SMBS_LOGO" style="width: 200px; height: 70px;"></a>
                   </div>
 
                  
@@ -146,12 +146,12 @@
                           <!-- mega-menu end -->
                           <!-- mega-menu start -->
                           <li class="" >
-                            <a class="scroll-to" href="#products">Products</a>
+                            <a class="scroll-to" href="#products">Produits</a>
                             
                           </li>
                           <!-- mega-menu end -->
                           <li class=" ">
-                            <a class="scroll-to" href="#brands">Brands</a>
+                            <a class="scroll-to" href="#brands">Marques</a>
                             
                           </li>
                           <!-- mega-menu start -->
@@ -169,23 +169,7 @@
                         </ul>
                         <!-- main-menu end -->
                         
-                        <!-- header dropdown buttons -->
-                        <div class="header-dropdown-buttons hidden-xs ">
-                          <div class="btn-group dropdown">
-                            <button type="button" class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-search"></i></button>
-                            <ul class="dropdown-menu dropdown-menu-right dropdown-animation">
-                              <li>
-                                <form role="search" class="search-box margin-clear">
-                                  <div class="form-group has-feedback">
-                                    <input type="text" class="form-control" placeholder="Search">
-                                    <i class="icon-search form-control-feedback"></i>
-                                  </div>
-                                </form>
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
-                        <!-- header dropdown buttons end-->
+                        
                         
                       </div>
 
