--- a/_includes/products.html
+++ b/_includes/products.html
@@ -25,7 +25,7 @@
                           <p class="small">{{ produit.content }}</p>
                           <div class="elements-list clearfix">
                             <span class="price"><del>{{ produit.faux_prix }}</del></span>
-                            <a href="#" class="pull-right margin-clear btn btn-sm btn-default-transparent btn-animated">{{ produit.prix }}</i></a>
+                            <h4 class=" btn btn-sm btn-default-transparent btn-animated">{{ produit.prix }}</h4>
                           </div>
                         </div>
                       </div>
