--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
                     <h2>{{ site.showroom }} </h2>
                   </div>
                   <div class="col-sm-4">
-                    <p class="mt-10"><a href="#" class="btn btn-animated btn-lg btn-gray-transparent ">Contact<i class="fa fa-map-marker pl-20"></i></a></p>
+                    <p class="mt-10"><h4 class="btn btn-animated btn-lg btn-gray-transparent ">Contact<i class="fa fa-map-marker pl-20"></i></h4></p>
                   </div>
                 </div>
               </div>
