--- a/_includes/header.html
+++ b/_includes/header.html
@@ -140,28 +140,24 @@
 
                           <!-- mega-menu start -->
                           <li class=" active mega-menu">
-                            <a class="scroll-to" href="#home">Accueil</a>
+                            <a class="scroll-to" href="/">Accueil</a>
                             
                           </li>
                           <!-- mega-menu end -->
                           <!-- mega-menu start -->
                           <li class="" >
-                            <a class="scroll-to" href="#products">Produits</a>
+                            <a class="scroll-to" href="#">Produits</a>
                             
                           </li>
                           <!-- mega-menu end -->
                           <li class=" ">
-                            <a class="scroll-to" href="#brands">Marques</a>
+                            <a class="scroll-to" href="#">Présentation</a>
                             
                           </li>
-                          <!-- mega-menu start -->
-                          <li class="">
-                            <a class="scroll-to" href="#categories" >Categories</a>
-                            
-                          </li>
+                         
                           <!-- mega-menu end -->
                           <li class=" ">
-                            <a class="scroll-to" href="#footer">Contact</a>
+                            <a class="scroll-to" href="/contact">Contact</a>
                             
                           </li>
                           
