--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -118,6 +118,9 @@
     <script src="/plugins/jquery.validate.js"></script>
     <!-- Background Video -->
     <script src="/plugins/vide/jquery.vide.js"></script>
+    <!-- Google Maps javascript -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false&amp;signed_in=true"></script>
+    <script type="text/javascript" src="/js/google.map.config.js"></script>
     <!-- Owl carousel javascript -->
     <script type="text/javascript" src="/plugins/owl-carousel/owl.carousel.js"></script>
     <!-- SmoothScroll javascript -->
@@ -127,6 +130,7 @@
     <script type="text/javascript" src="/js/template.js"></script>
     <!-- Custom Scripts -->
     <script type="text/javascript" src="/js/custom.js"></script>
+   
     <script type="text/javascript">
    // scroll to
     $('.scroll-to').on('click', function() {
