--- a/_includes/header.html
+++ b/_includes/header.html
@@ -151,7 +151,7 @@
                           </li>
                           <!-- mega-menu end -->
                           <li class=" ">
-                            <a class="scroll-to" href="#">Présentation</a>
+                            <a class="scroll-to" href="/about">Présentation</a>
                             
                           </li>
                          
