--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -25,11 +25,10 @@
       <!-- header-container start -->
       {% include header.html %}
       <!-- header-container end -->
-    
-    {% include page_contact.html %}
 
-     
-      
+      {% include page_about.html %}
+    
+
 
       {% include footer.html %}
 
