modification page produit

--- a/_includes/products.html
+++ b/_includes/products.html
@@ -21,12 +21,8 @@
                           
                         </div>
                         <div class="body">
-                          <h3><a href="#">{{ produit.title }}</a></h3>
-                          <p class="small">{{ produit.content }}</p>
-                          <div class="elements-list clearfix">
-                            <span class="price"><del>{{ produit.faux_prix }}</del></span>
-                            <h4 class=" btn btn-sm btn-default-transparent btn-animated">{{ produit.prix }}</h4>
-                          </div>
+                          <h3><a href="{{ produit.url }}">{{ produit.title }}</a></h3>
+                          
                         </div>
                       </div>
                     </div>
