--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -27,8 +27,8 @@
       <!-- header-container end -->
     
       
-
-
+      {% include page_produit.html %}
+      
       
 
       {% include footer.html %}
