--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -26,7 +26,7 @@
       {% include header.html %}
       <!-- header-container end -->
     
-      
+      {% include page_category.html %}
       
       
 
