--- a/_includes/brands.html
+++ b/_includes/brands.html
@@ -7,8 +7,8 @@
               <div class="call-to-action text-center">
                 <div class="row">
                   <div class="col-sm-12">
-                    <h1 class="title">Toutes nos marques partenaires</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem quasi explicabo consequatur consectetur, a atque voluptate officiis eligendi nostrum.</p>
+                    <h1 class="title">Toutes nos marques mondialement connues</h1>
+                    
                   </div>
                   
                 </div>
