--- a/_includes/products.html
+++ b/_includes/products.html
@@ -11,21 +11,31 @@
               <div class="tab-content clear-style">
                 <div class="tab-pane active" id="pill-1">
                   <div class="row masonry-grid-fitrows grid-space-10">
-                  {% for produit in site.produits %}
-                    <div class="col-md-3 col-sm-6 masonry-grid-item">
+                  {% for produit in site.produits limit:4 %}
+                  <div class="col-md-3 col-sm-6 masonry-grid-item">
                       <div class="listing-item white-bg bordered mb-20">
                         <div class="overlay-container">
                           <img src="{{ produit.image }}" alt="" style="width: 276px; height: 276px;">
-                          <a class="overlay-link popup-img-single" href="{{ produit.image }}"><i class="fa fa-search-plus"></i></a>
-                          <span class="badge">{{ produit.label }}</span>
-                          
+                          <a class="overlay-link" href="{{ produit.url }}" target="blank"><i class="fa fa-search-plus"></i></a>
+                          <span class="badge">30% OFF</span>
+                          <div class="overlay-to-top links">
+                            <span class="small">
+                              
+                              <a href="{{ produit.url }}" class="btn-sm-link"><i class="icon-link pr-5"></i>Voir le produit</a>
+                            </span>
+                          </div>
                         </div>
-                        <div class="body">
-                          <h3><a href="{{ produit.url }}">{{ produit.title }}</a></h3>
+                        <div class="body default-bg">
+                          <h3><a href="{{ produit.url }}" target="blank">{{ produit.title }}</a></h3>
                           
+                          <div class="elements-list clearfix">
+                            
+                            <a href="{{ produit.url }}" class="pull-right margin-clear btn btn-sm btn-default-transparent btn-animated" target="blank">Voir le produit<i class="fa fa-shopping-cart"></i></a>
+                          </div>
                         </div>
                       </div>
                     </div>
+                    
                   {% endfor %} 
                   </div>
                 </div>
