modification front end 4

--- a/_includes/page_produit.html
+++ b/_includes/page_produit.html
@@ -41,7 +41,7 @@
 										<div class="tab-pane active" id="pill-1">
 											<div class="owl-carousel content-slider-with-large-controls">
 											<div class="overlay-container overlay-visible">
-													<img src="{{ page.image }}" alt="">
+													<img src="{{ page.image }}" alt="" style="width: 358px; height: 358px">
 													<a href="{{ page.image }}" class="popup-img overlay-link" title="{{ page.title }}"><i class="icon-plus-1"></i></a>
 												</div>
 												
